k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: test
  labels:
    app: django-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30010
  selector:
    app: django-app
